@@ -63,14 +63,13 @@ import org.geysermc.mcprotocollib.protocol.data.game.item.component.DataComponen
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.DataComponents;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.Fireworks;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.HolderSet;
-import org.geysermc.mcprotocollib.protocol.data.game.item.component.InstrumentComponent;
+import org.geysermc.mcprotocollib.protocol.data.game.item.component.Instrument;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.ItemAttributeModifiers;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.ItemEnchantments;
-import org.geysermc.mcprotocollib.protocol.data.game.item.component.JukeboxPlayable;
+import org.geysermc.mcprotocollib.protocol.data.game.item.component.JukeboxSong;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.KineticWeapon;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.MobEffectDetails;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.MobEffectInstance;
-import org.geysermc.mcprotocollib.protocol.data.game.item.component.ProvidesTrimMaterial;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.SuspiciousStewEffect;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.SwingAnimation;
 import org.geysermc.mcprotocollib.protocol.data.game.item.component.ToolData;
@@ -85,6 +84,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.IntStream;
 
@@ -148,13 +148,13 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
 
     RegistryHasher<?> DAMAGE_TYPE = registry(JavaRegistries.DAMAGE_TYPE);
 
-    MinecraftHasher<InstrumentComponent.Instrument> DIRECT_INSTRUMENT = MinecraftHasher.mapBuilder(builder -> builder
-        .accept("sound_event", SOUND_EVENT, InstrumentComponent.Instrument::soundEvent)
-        .accept("use_duration", FLOAT, InstrumentComponent.Instrument::useDuration)
-        .accept("range", FLOAT, InstrumentComponent.Instrument::range)
-        .accept("description", ComponentHasher.COMPONENT, InstrumentComponent.Instrument::description));
+    MinecraftHasher<Instrument> DIRECT_INSTRUMENT = MinecraftHasher.mapBuilder(builder -> builder
+        .accept("sound_event", SOUND_EVENT, Instrument::soundEvent)
+        .accept("use_duration", FLOAT, Instrument::useDuration)
+        .accept("range", FLOAT, Instrument::range)
+        .accept("description", ComponentHasher.COMPONENT, Instrument::description));
 
-    RegistryHasher<InstrumentComponent.Instrument> INSTRUMENT = registry(JavaRegistries.INSTRUMENT, DIRECT_INSTRUMENT);
+    RegistryHasher<Instrument> INSTRUMENT = registry(JavaRegistries.INSTRUMENT, DIRECT_INSTRUMENT);
 
     MinecraftHasher<ArmorTrim.TrimMaterial> DIRECT_TRIM_MATERIAL = MinecraftHasher.mapBuilder(builder -> builder
         .accept("asset_name", MinecraftHasher.STRING, ArmorTrim.TrimMaterial::assetBase)
@@ -170,13 +170,13 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
 
     RegistryHasher<ArmorTrim.TrimPattern> TRIM_PATTERN = registry(JavaRegistries.TRIM_PATTERN, DIRECT_TRIM_PATTERN);
 
-    MinecraftHasher<JukeboxPlayable.JukeboxSong> DIRECT_JUKEBOX_SONG = MinecraftHasher.mapBuilder(builder -> builder
-        .accept("sound_event", SOUND_EVENT, JukeboxPlayable.JukeboxSong::soundEvent)
-        .accept("description", ComponentHasher.COMPONENT, JukeboxPlayable.JukeboxSong::description)
-        .accept("length_in_seconds", FLOAT, JukeboxPlayable.JukeboxSong::lengthInSeconds)
-        .accept("comparator_output", INT, JukeboxPlayable.JukeboxSong::comparatorOutput));
+    MinecraftHasher<JukeboxSong> DIRECT_JUKEBOX_SONG = MinecraftHasher.mapBuilder(builder -> builder
+        .accept("sound_event", SOUND_EVENT, JukeboxSong::soundEvent)
+        .accept("description", ComponentHasher.COMPONENT, JukeboxSong::description)
+        .accept("length_in_seconds", FLOAT, JukeboxSong::lengthInSeconds)
+        .accept("comparator_output", INT, JukeboxSong::comparatorOutput));
 
-    RegistryHasher<JukeboxPlayable.JukeboxSong> JUKEBOX_SONG = registry(JavaRegistries.JUKEBOX_SONG, DIRECT_JUKEBOX_SONG);
+    RegistryHasher<JukeboxSong> JUKEBOX_SONG = registry(JavaRegistries.JUKEBOX_SONG, DIRECT_JUKEBOX_SONG);
 
     MinecraftHasher<BannerPatternLayer.BannerPattern> DIRECT_BANNER_PATTERN = MinecraftHasher.mapBuilder(builder -> builder
         .accept("asset_id", KEY, BannerPatternLayer.BannerPattern::getAssetId)
@@ -191,6 +191,10 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
     RegistryHasher<?> PIG_VARIANT = registry(JavaRegistries.PIG_VARIANT);
 
     RegistryHasher<?> COW_VARIANT = registry(JavaRegistries.COW_VARIANT);
+
+    RegistryHasher<?> CHICKEN_VARIANT = registry(JavaRegistries.CHICKEN_VARIANT);
+
+    RegistryHasher<?> ZOMBIE_NAUTILUS_VARIANT = registry(JavaRegistries.ZOMBIE_NAUTILUS_VARIANT);
 
     RegistryHasher<?> FROG_VARIANT = registry(JavaRegistries.FROG_VARIANT);
 
@@ -266,12 +270,12 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
         .accept("slot", INT, ItemContainerSlot::index)
         .accept("item", ITEM_STACK, ItemContainerSlot::item));
 
-    MinecraftHasher<List<ItemStack>> ITEM_CONTAINER_CONTENTS = CONTAINER_SLOT.list().cast(stacks -> {
+    MinecraftHasher<List<Optional<ItemStack>>> ITEM_CONTAINER_CONTENTS = CONTAINER_SLOT.list().cast(stacks -> {
         List<ItemContainerSlot> slots = new ArrayList<>();
         for (int i = 0; i < stacks.size(); i++) {
-            ItemStack stack = stacks.get(i);
-            if (stack != null) {
-                slots.add(new ItemContainerSlot(i, stacks.get(i)));
+            Optional<ItemStack> stack = stacks.get(i);
+            if (stack.isPresent()) {
+                slots.add(new ItemContainerSlot(i, stack.get()));
             }
         }
         return slots;
@@ -283,7 +287,7 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
 
     // Encode as a single element if the list only has one element
     MinecraftHasher<AdventureModePredicate> ADVENTURE_MODE_PREDICATE = MinecraftHasher.either(BLOCK_PREDICATE,
-        predicate -> predicate.getPredicates().size() == 1 ? predicate.getPredicates().get(0) : null, BLOCK_PREDICATE.list(), AdventureModePredicate::getPredicates);
+        predicate -> predicate.getPredicates().size() == 1 ? predicate.getPredicates().getFirst() : null, BLOCK_PREDICATE.list(), AdventureModePredicate::getPredicates);
 
     MinecraftHasher<ItemAttributeModifiers.DisplayType> ATTRIBUTE_MODIFIER_DISPLAY_TYPE = MinecraftHasher.fromEnum();
 
@@ -312,8 +316,6 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
         .accept("id", EFFECT_ID, SuspiciousStewEffect::getMobEffectId)
         .optional("duration", INT, SuspiciousStewEffect::getDuration, 160));
 
-    MinecraftHasher<InstrumentComponent> INSTRUMENT_COMPONENT = MinecraftHasher.either(INSTRUMENT.holder(), InstrumentComponent::instrumentHolder, KEY, InstrumentComponent::instrumentLocation);
-
     MinecraftHasher<ToolData.Rule> TOOL_RULE = MinecraftHasher.mapBuilder(builder -> builder
         .accept("blocks", RegistryHasher.BLOCK.holderSet(), ToolData.Rule::getBlocks)
         .optionalNullable("speed", MinecraftHasher.FLOAT, ToolData.Rule::getSpeed)
@@ -337,13 +339,9 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
 
     MinecraftHasher<SwingAnimation.Type> SWING_ANIMATION_TYPE = MinecraftHasher.fromEnum();
 
-    MinecraftHasher<ProvidesTrimMaterial> PROVIDES_TRIM_MATERIAL = MinecraftHasher.either(TRIM_MATERIAL.holder(), ProvidesTrimMaterial::materialHolder, KEY, ProvidesTrimMaterial::materialLocation);
-
     MinecraftHasher<ArmorTrim> ARMOR_TRIM = MinecraftHasher.mapBuilder(builder -> builder
         .accept("material", TRIM_MATERIAL.holder(), ArmorTrim::material)
         .accept("pattern", TRIM_PATTERN.holder(), ArmorTrim::pattern));
-
-    MinecraftHasher<JukeboxPlayable> JUKEBOX_PLAYABLE = MinecraftHasher.either(JUKEBOX_SONG.holder(), JukeboxPlayable::songHolder, KEY, JukeboxPlayable::songLocation);
 
     MinecraftHasher<BannerPatternLayer> BANNER_PATTERN_LAYER = MinecraftHasher.mapBuilder(builder -> builder
         .accept("pattern", BANNER_PATTERN.holder(), BannerPatternLayer::getPattern)
@@ -462,18 +460,6 @@ public interface RegistryHasher<DirectType> extends MinecraftHasher<Integer> {
     static <EnumConstant extends Enum<EnumConstant>> RegistryHasher<?> enumIdRegistry(EnumConstant[] values, Function<EnumConstant, Key> toKey) {
         MinecraftHasher<Integer> hasher = KEY.cast(i -> toKey.apply(values[i]));
         return hasher::hash;
-    }
-
-    /**
-     * Creates a hasher that hashes a {@code Holder<Key>}, also known as an {@code EitherHolder} in Mojmap.
-     *
-     * <p>Please note that a {@code Holder<Key>} is only a valid representation of an {@code EitherHolder} in MCPL if the stream codec of the {@code EitherHolder} does not support directly encoding unregistered values.</p>
-     *
-     * @param registry the registry the {@code Holder} is for.
-     * @return a hasher that hashes a {@code Holder<Key>} for the given registry.
-     */
-    static MinecraftHasher<Holder<Key>> eitherHolderHasher(JavaRegistryKey<?> registry) {
-        return MinecraftHasher.KEY.registryCast((registries, holder) -> holder.getOrCompute(id -> registry.key(registries, id)));
     }
 
     class RegistryHasherWithDirectHasher<DirectType> implements RegistryHasher<DirectType> {
