@@ -25,6 +25,7 @@
 
 package org.geysermc.geyser.util;
 
+import net.kyori.adventure.key.Key;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.cloudburstmc.math.vector.Vector3i;
 import org.cloudburstmc.nbt.NbtMap;
@@ -360,26 +361,25 @@ public class InventoryUtils {
         if (slotDisplay instanceof EmptySlotDisplay) {
             return itemStack.isEmpty();
         }
-        if (slotDisplay instanceof CompositeSlotDisplay compositeSlotDisplay) {
-            if (compositeSlotDisplay.contents().size() == 1) {
-                return acceptsAsInput(session, compositeSlotDisplay.contents().get(0), itemStack);
+        if (slotDisplay instanceof CompositeSlotDisplay(List<SlotDisplay> contents)) {
+            if (contents.size() == 1) {
+                return acceptsAsInput(session, contents.getFirst(), itemStack);
             }
-            return compositeSlotDisplay.contents().stream().anyMatch(aSlotDisplay -> acceptsAsInput(session, aSlotDisplay, itemStack));
+            return contents.stream().anyMatch(aSlotDisplay -> acceptsAsInput(session, aSlotDisplay, itemStack));
         }
         if (slotDisplay instanceof WithRemainderSlotDisplay remainderSlotDisplay) {
             return acceptsAsInput(session, remainderSlotDisplay.input(), itemStack);
         }
-        if (slotDisplay instanceof ItemSlotDisplay itemSlotDisplay) {
-            return itemStack.getJavaId() == itemSlotDisplay.item();
+        if (slotDisplay instanceof ItemSlotDisplay(int item)) {
+            return itemStack.getJavaId() == item;
         }
-        if (slotDisplay instanceof ItemStackSlotDisplay itemStackSlotDisplay) {
-            ItemStack other = itemStackSlotDisplay.itemStack();
+        if (slotDisplay instanceof ItemStackSlotDisplay(ItemStack other)) {
             // Amount check might be flimsy?
             return itemStack.getJavaId() == other.getId() && itemStack.getAmount() >= other.getAmount()
                 && Objects.equals(itemStack.getComponents(), other.getDataComponentsPatch());
         }
-        if (slotDisplay instanceof TagSlotDisplay tagSlotDisplay) {
-            return itemStack.is(session, new Tag<>(JavaRegistries.ITEM, tagSlotDisplay.tag()));
+        if (slotDisplay instanceof TagSlotDisplay(Key tag)) {
+            return itemStack.is(session, new Tag<>(JavaRegistries.ITEM, tag));
         }
         session.getGeyser().getLogger().warning("Unknown slot display type: " + slotDisplay);
         return false;
